--- a/src/Components/Login/LoginRegister.css
+++ b/src/Components/Login/LoginRegister.css
@@ -15,10 +15,12 @@
 .form h1 {
     font-size: 2rem;
     margin-bottom: 1rem;
+    color: rgba(34, 34, 34, 0.905)
 }
 .form  h5{
     color: #007bff;
     font-size: 1rem;
+    text-align: center;
 }
 
 .form p {
